# Dana-lang

./: AGENTS.md  Cargo.toml  LICENSE  README.md  SPEC.md  dana.ps1  test.dana  test_parser.rs
.agents/: EPOS.md  MASTER_SPEC.md  SPEC.md  V02_MANIFEST.md
docs/stdlib/: io.md  kernel.md
examples/: factorial_iterative.dana  hello.dana  match_basic.dana  math.dana  strings.dana  while.dana
src/: ast.rs  grammar.pest  graph.rs  main.rs  parser.rs  types.rs
src/runtime/: error.rs  evaluator.rs  mod.rs  native.rs  node.rs  pulse.rs  scheduler.rs  value.rs
src/runtime/scheduler/: executor.rs  propagator.rs  state.rs
src/stdlib/: io.rs  kernel.rs  mod.rs
