[package]
name = "dana-lang"
version = "0.1.0"
edition = "2024"
authors = ["Dana Language Team"]
description = "A data-flow oriented, graph-based programming language"
license = "MIT OR Apache-2.0"

[dependencies]
# Parser
pest = "2.7"
pest_derive = "2.7"

# Graph data structures
petgraph = "0.6"

# Async runtime (for future async edges)
tokio = { version = "1.35", features = ["full"] }

# Error handling
thiserror = "~1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization (for debugging/visualization)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
